--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,28 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
-    <button id="press-me">Нажми меня</button>
+    <div class="main">
+        <div class="messages-window">
+            <div class="messages-frame">
+                <p class="message">[date] login: text message</p>
+            </div>
+            <div class="message-form">
+                <form action="#">
+                    <input class="input" type="text" placeholder="Enter your text">
+                    <button class="button" type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+        <div class="users-list">
+            <ul>
+                <li><p>username1</p></li>
+                <li><p>username2</p></li>
+                <li><p>username3</p></li>
+                <li><p>username4</p></li>
+                <li><p>username5</p></li>
+            </ul>
+        </div>
+
+    </div>
 </body>
 </html>
